--- a/package.json
+++ b/package.json
@@ -16,14 +16,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.6",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
     "@swc/core": "^1.3.3",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/node": "^18.7.20",
@@ -34,7 +26,6 @@
     "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "babel-loader": "^8.3.0",
     "daisyui": "^2.46.0",
     "eslint": "^8.24.0",
     "eslint-import-resolver-typescript": "^3.5.1",
@@ -59,9 +50,7 @@
     "lint": "eslint --cache .",
     "test": "npm-run-all --parallel tsc:check vitest:run lint lint:format",
     "tsc:check": "tsc",
-    "vitest:run": "vitest run",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "vitest:run": "vitest run"
   },
   "browserslist": [
     ">0.2%",
