--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cnakazawa/vite-ts-react-tailwind",
+  "name": "@bar9/green-template",
   "version": "0.0.1",
-  "author": "Christoph Nakazawa <christoph.pojer@gmail.com>",
+  "author": "Roland Brand <rolandbrand11@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cpojer/vite-ts-react-tailwind.git"
+    "url": "git://github.com/bar9/green-template.git"
   },
   "type": "module",
   "engines": {
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
+    "@mdx-js/react": "^2.2.1",
     "@storybook/addon-actions": "^6.5.15",
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
@@ -25,6 +26,7 @@
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@swc/core": "^1.3.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/node": "^18.7.20",
     "@types/prettier": "^2.7.1",
@@ -61,8 +63,10 @@
     "test": "npm-run-all --parallel tsc:check vitest:run lint lint:format",
     "tsc:check": "tsc",
     "vitest:run": "vitest run",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "npm-run-all --parallel watch:css watch:storybook",
+    "build-storybook": "build-storybook",
+    "watch:storybook": "start-storybook dev -p 6006",
+    "watch:css": "npx tailwindcss -i ./src/App.css -o ./public/tailwind.css --watch"
   },
   "browserslist": [
     ">0.2%",
